--- a/src/site/content/feeds/flex-guide-origami.njk
+++ b/src/site/content/feeds/flex-guide-origami.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
-title: Flex Guide for Origami Poster
+title: Origami Conf Warna Sejahtera Company
 styleScripts:
     - /css/guide-origami.css
 draft: true
@@ -16,23 +16,27 @@ tags:
         {# <img style="display: none;" src="/images/feeds/nihon-tested.jpg" /> #}
 
         <div id="gami-poster">
-            <div id="posterhead-origami">
-                <h1 id="ayang-title">AYANG</h1>
-                <div id="established-ayang">
-                    <h1>SINCE 1994</h1>
-                    <h1>SINGAPORE</h1>
+            <div id="letterhead" class="region">
+                <div id="posterhead-origami">
+                    <h1 id="ayang-title">AYANG</h1>
+                    <div id="established-ayang">
+                        <h1>SINCE 1994</h1>
+                        <h1>SAAGAACHI</h1>
+                    </div>
+                    <h1>CONFERENCE</h1>
+                    <h1>ISSUED 20</h1>
                 </div>
-                <h1>CONFERENCE</h1>
-                <h1>ISSUED 20</h1>
-            </div>
-            <div id="origami-trademark-company">
-                                    <h2>ORIGAMI</h2>
-                    <h2>COLORBALL FLEXING MANUAL GUIDE STANDARD COMPANY</h2>
+                <div id="origami-trademark-company">
+                                        <h2>ORIGAMI FLEX.</h2>
+                        <h2>EVENT BY WARNA SEJAHTERA SEKALI PUTAR COMPANY</h2>
+                </div>
             </div>
             <div id="pattern-origamis">
                 <div class="pattern-origami-item">
                     <div class="left-pt">
                     <div class="full-pt-cl">
+                        <div id="green-mark" class="half-pt-cl">
+                        </div>
                     </div>
                     <div class="half-pt-cl">
                     </div>
@@ -42,19 +46,31 @@ tags:
                     </div>
                     <div class="third-pt-cl">
                     </div>
+                    <div class="full-pt-cl reverse">
+                        <div id="blue-mark" class="half-pt-cl">
+                        </div>
+                    </div>
                     </div>
                 </div>
                 <div class="pattern-origami-item">
                     <div class="left-pt">
-                    <div class="full-pt-cl">
+                    <div class="full-pt-cl center-pt">
+                        <div id="default-mark" class="half-pt-cl">
+                        </div>
                     </div>
                     <div class="half-pt-cl">
                         <div id="blue-mark" class="half-pt-cl">
                         </div>
                     </div>
-                    <div class="half-pt-cl">
+                    <div class="half-pt-cl reverse">
+                        <div id="green-mark" class="half-pt-cl">
+                        </div>
                     </div>
                     <div class="third-pt-cl">
+                    </div>
+                    <div class="full-pt-cl center-pt">
+                        <div id="default-mark" class="half-pt-cl">
+                        </div>
                     </div>
                     </div>
                 </div>
@@ -66,7 +82,7 @@ tags:
                     </div>
                     <div class="third-pt-cl">
                     </div>
-                    <div class="full-pt-cl">
+                    <div class="full-pt-cl reverse">
                          <div id="green-mark" class="half-pt-cl">
                         </div>
                     </div>
@@ -80,15 +96,18 @@ tags:
                     <div class="left-pt">
                         <div class="full-pt-cl">
                         </div>
-                        <div class="half-pt-cl">
+                        <div class="half-pt-cl center-pt">
+                            <div id="default-mark" class="half-pt-cl">
                         </div>
-                        <div class="full-pt-cl">
+                        </div>
+                        <div class="full-pt-cl center-pt">
                             <div id="red-mark" class="half-pt-cl">
                             </div>
+
+                        </div>
+                        <div class="half-pt-cl center-pt">
                             <div id="blue-mark" class="half-pt-cl">
                             </div>
-                        </div>
-                        <div class="half-pt-cl">
                         </div>
                         <div class="third-pt-cl">
                         </div>
@@ -100,7 +119,7 @@ tags:
         </div>
         <div class="gami-flexes">
         <div class="gami-boxes">
-            <div class="box-gami brown-gami">
+            <div class="box-gami">
             </div>
             <h1>FLEX</h1>
             <h1>-START</h1>
@@ -112,11 +131,7 @@ tags:
             </div>
             <div class="box-gami">
             </div>
-            <div class="box-gami">
-            </div>
-            <div class="box-gami">
-            </div>
-            <div class="box-gami">
+            <div class="box-gami brown-gami">
             </div>
             <div class="box-gami">
             </div>
@@ -132,13 +147,22 @@ tags:
             <h1>END</h1>
             <div class="box-gami">
             </div>
+            <div class="box-gami purple-gami">
+            </div>
+            <div class="box-gami">
+            </div>
+        </div>
+        <div id="boxes__left" class="gami-boxes">
+            <h1>LEFT-</h1>
             <div class="box-gami">
             </div>
             <div class="box-gami">
             </div>
             <div class="box-gami">
             </div>
-            <div class="box-gami">
+            <div class="box-gami brown-gami">
+            </div>
+            <div class="box-gami blue-gami">
             </div>
         </div>
         <div id="boxes__space-between" class="gami-boxes">
@@ -150,11 +174,20 @@ tags:
             <h1>BETWEEN</h1>
             <div class="box-gami">
             </div>
-                        <div class="box-gami">
+            <div class="box-gami">
+            </div>
+            <div class="box-gami brown-gami">
             </div>
             <div class="box-gami">
             </div>
+        </div>
+        <div id="boxes__center" class="gami-boxes">
+            <div class="box-gami blue-gami">
+            </div>
             <div class="box-gami">
+            </div>
+            <h1>CENTER</h1>
+            <div class="box-gami brown-gami">
             </div>
             <div class="box-gami">
             </div>
@@ -173,16 +206,34 @@ tags:
             <div class="box-gami">
             </div>
         </div>
+                <div id="boxes__right" class="gami-boxes">
+            <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
+            <div class="box-gami">
+            </div>
+            <div class="box-gami red-gami">
+            </div>
+            <h1>-RIGHT</h1>
+            <div class="box-gami green-gami">
+            </div>
+        </div>
         <div id="boxes__space-evenly" class="gami-boxes">
             <div class="box-gami">
             </div>
             <h1>SPACE-</h1>
-            <div class="box-gami purple-gami">
+            <div class="box-gami">
             </div>
             <h1>EVENLY</h1>
             <div class="box-gami brown-gami">
             </div>
+            <div class="box-gami red-gami">
+            </div>
+            <div class="box-gami">
+            </div>
         </div>
+
         </div>
         </div>
     </div>
