--- a/src/site/content/feeds/green-tour-meditation-poster.njk
+++ b/src/site/content/feeds/green-tour-meditation-poster.njk
@@ -16,6 +16,9 @@ tags:
             <h1>GREEN TRIP CLUB</h1>
             <h1>⬤</h1>
         </div>
+        <div id="cover-poster">
+            <img src="https://64.media.tumblr.com/403598cb32e53a7355f2748b561b370c/2046dfa6e2da3f3d-7e/s2048x3072/1e0095ae9036f7daacdbb8180550f244514a357b.jpg" />
+        </div>
     </div>
     <div class="fishnet-poster">
         <div id="fishnet-bg">
@@ -37,7 +40,7 @@ tags:
         <div class="little-boxes-even">
             {% for i in range(0, 42) %}
                 <div class="little-i"></div>
-            {% endfor %}
+            {% endfor %} 
         </div>
         <div class="little-boxes">
             {% for i in range(0, 32) %}
@@ -50,8 +53,64 @@ tags:
             {% endfor %}
         </div>
         </div>
-        <div id="quote-bjorke">
+        <div id="poster-club-type">
             <h1>Take a walk for one hour and see what happen</h1>
+            <h2>SCHEDULE</h2>
+            <h2>EVERY SUNDAY</h2>
+            <h2>06:30AM - FINISHED</h2>
+        </div>
+        <div id="destination">
+            <h1>WALKING SCHEDULES</h1>
+            <div id="schedules-table">
+                <div class="schedule-item">
+                    <h2>01</h2>
+                    <h2>01/07/22</h2>
+                    <h2>SANAK TOWN</h2>
+                    <h2>UNAVAILABLE TICKETS</h2>
+                </div>
+                <div class="schedule-item">
+                    <h2>02</h2>
+                    <h2>01/14/22</h2>
+                    <h2>PALACES CITY CENTER PARK</h2>
+                    <h2>AVAILABLE NOW</h2>
+                </div>
+                <div class="schedule-item">
+                    <h2>03</h2>
+                    <h2>01/28/22</h2>
+                    <h2>CITYMALL GREEN BOTANY</h2>
+                    <h2>SOLD OUT</h2>
+                </div>
+                <div class="schedule-item">
+                    <h2>04</h2>
+                    <h2>02/5/22</h2>
+                    <h2>TSUNAMI FALL MUSEUM</h2>
+                    <h2>AVAILABLE NOW</h2>
+                </div>
+                <div class="schedule-item">
+                    <h2>05</h2>
+                    <h2>01/12/22</h2>
+                    <h2>AIRPORT WALK HALL</h2>
+                    <h2>AVAILABLE NOW</h2>
+                </div>
+                <div class="schedule-item">
+                    <h2>06</h2>
+                    <h2>01/19/22</h2>
+                    <h2>GOOSY CONFERENCE OUTDOOR</h2>
+                    <h2>AVAILABLE NOW</h2>
+                </div>
+                <div class="schedule-item">
+                    <h2>07</h2>
+                    <h2>01/12/22</h2>
+                    <h2>AIRPORT WALK HALL</h2>
+                    <h2>AVAILABLE NOW</h2>
+                </div>
+                <div class="schedule-item">
+                    <h2>08</h2>
+                    <h2>01/19/22</h2>
+                    <h2>GOOSY CONFERENCE OUTDOOR</h2>
+                    <h2>AVAILABLE NOW</h2>
+                </div>
+            </div>
         </div>
     </div>
 </div>
